--- a/packages/backend-with-express/package.json
+++ b/packages/backend-with-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-with-express",
+  "name": "@root/backend-with-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@site-wrapper/common": "1.0.0",
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
