--- a/packages/backend-with-express/package.json
+++ b/packages/backend-with-express/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@site-wrapper/common": "1.0.0",
     "@prisma/client": "^4.11.0",
+    "@site-wrapper/common": "1.0.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "slugify": "^1.6.5",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.4",
     "nodemon": "^2.0.21",
