--- a/packages/frontend-with-react/package.json
+++ b/packages/frontend-with-react/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@site-wrapper/common": "1.0.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
