--- a/packages/backend-with-express/package.json
+++ b/packages/backend-with-express/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "slugify": "^1.6.5",
     "zod": "^3.20.6",
     "zod-validation-error": "^1.0.1"
@@ -26,6 +27,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.14.4",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
