--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@site-wrapper/common",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "./dist/index.js",
   "license": "ISC",
   "dependencies": {
     "zod": "^3.21.4"
