--- a/packages/backend-with-express/tsconfig.json
+++ b/packages/backend-with-express/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "CommonJS" /* Specify what module code is generated. */,
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
-    "rootDirs": [
-      "./src"
-    ] /* Allow multiple folders to be treated as one when resolving modules. */,
+    "rootDirs": ["./src"] /* Allow multiple folders to be treated as one when resolving modules. */,
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
