--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "module": "commonjs" /* Specify what module code is generated. */,
+    "module": "CommonJS" /* Specify what module code is generated. */,
+    "moduleResolution": "node",
     "rootDir": "./src" /* Specify the root folder within your source files. */,
     "outDir": "./dist",
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
